Prevent wrapping long album names.

--- a/153957_theme/static/css/style.css
+++ b/153957_theme/static/css/style.css
@@ -38,6 +38,7 @@ a:hover {
   justify-content: flex-start;
   overflow-y: auto;
   max-height: 99vh;
+  white-space: nowrap;
 }
 
 .menu ul {
